Icon cropping fix

--- a/less/fuelux-override/tree.less
+++ b/less/fuelux-override/tree.less
@@ -25,8 +25,8 @@
 		top: -1px;
 		left: -1px;
 		.sprite(-176px, 0);
-		width: 13px;
-		height: 13px;
+		width: 15px;
+		height: 14px;
 	}
 
 	&.tree-folder-select .icon-caret {
@@ -46,7 +46,7 @@
 		margin-right: 4px;
 		.sprite(-96px, -2px);
 		height: 12px;
-		width: 16px;
+		width: 17px;
 	}
 
 	// SELECTED - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
